--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1524,6 +1524,23 @@ a {
             justify-content: space-between;
   }
 }
+@media screen and (min-width: 768px) {
+  .feedback.section {
+    padding: 130px 0;
+  }
+  .feedback-content {
+    width: 1090px;
+    padding: 40px;
+    margin: 0 auto 40px auto;
+  }
+  .feedback-title {
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
+}
 .request-form {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -1644,7 +1661,7 @@ a {
   color: var(--txt-orange);
 }
 
-.btn {
+.request-form-holder .btn {
   width: 260px;
   height: 48px;
   background-color: var(--b-accent-background);
@@ -1667,7 +1684,7 @@ a {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-.btn:hover, .btn:focus {
+.request-form-holder .btn:hover, .request-form-holder .btn:focus {
   background-color: transparent;
   color: var(--txt-orange);
   border: 2px solid var(--b-accent-background);
@@ -1863,31 +1880,28 @@ a {
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-image: url(../images/footer-desk.png);
-    background-repeat: no-repeat;
-    background-size: 768px 552px;
-    background-position: center;
-    padding: 50px 40px 70px 40px;
-    width: 768px;
-    min-height: 520px;
+    background-size: 1680px 840px;
+    min-width: 1200px;
+    width: 100%;
+    min-height: 840px;
   }
   .request-form-input {
-    width: 390px;
-  }
-  .request-form-input:nth-child(2) {
-    margin-bottom: 30px;
+    width: 478px;
+    height: 70px;
   }
   .request-invite {
     font-weight: 600;
-    font-size: 14px;
-    line-height: 1.214;
+    font-size: 30px;
+    line-height: 1.23;
     letter-spacing: 0.08em;
-    margin-bottom: 40px;
+    margin-bottom: 56px;
   }
   .request-title {
     font-weight: 800;
-    font-size: 26px;
+    font-size: 46px;
     line-height: 1.3;
     letter-spacing: 0.03em;
+    margin-bottom: 50px;
   }
 
   .footer-line {
@@ -1920,6 +1934,15 @@ a {
   }
   .footer-callme {
     margin-bottom: 0;
+  }
+
+  .request-form-holder .btn {
+    width: 354px;
+    height: 70px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.14em;
   }
 
   .phone-groupe {
