--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -55,7 +55,7 @@
     }
   }
 }
-.btn {
+.request-form-holder .btn {
   width: 260px;
   height: 48px;
   background-color: var(--b-accent-background);
@@ -220,25 +220,23 @@
     &-form {
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       background-image: url(../images/footer-desk.png);
-      background-repeat: no-repeat;
-      background-size: 768px 552px;
-      background-position: center;
-      padding: 50px 40px 70px 40px;
-      width: 768px;
-      min-height: 520px;
+      background-size: 1680px 840px;
+      min-width: 1200px;
+      width: 100%;
+
+      min-height: 840px;
       &-input {
-        width: 390px;
-        &:nth-child(2) {
-          margin-bottom: 30px;
-        }
+        width: 478px;
+        height: 70px;
       }
     }
     &-invite {
-      @include font(600, 14px, 1.214, 0.08em);
-      margin-bottom: 40px;
+      @include font(600, 30px, 1.23, 0.08em);
+      margin-bottom: 56px;
     }
     &-title {
-      @include font(800, 26px, 1.3, 0.03em);
+      @include font(800, 46px, 1.3, 0.03em);
+      margin-bottom: 50px;
     }
   }
   .footer {
@@ -264,6 +262,11 @@
     &-callme {
       margin-bottom: 0;
     }
+  }
+  .request-form-holder .btn {
+    width: 354px;
+    height: 70px;
+    @include font(700, 14px, 1.214, 0.14em);
   }
   .phone-groupe {
     flex-direction: row;
