--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -141,3 +141,19 @@
     }
   }
 }
+@media screen and (min-width: 768px) {
+  .feedback {
+    &.section {
+      padding: 130px 0;
+    }
+    &-content {
+      width: 1090px;
+      padding: 40px;
+      margin: 0 auto 40px auto;
+    }
+    &-title {
+      @include font(800, 46px, 1.3, 0.03em);
+      margin-bottom: 50px;
+    }
+  }
+}
