зробив мобільну версію

--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -1,28 +1,83 @@
 <section class="how-made">
 	<div class="container">
-		<h2 class="hw-title">tradition and love</h2>
-		<h3 class="hw-subtitle">how it’s made?</h3>
-		<img src="" alt="корова">
-		<p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-		<p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
-		<p>Aliquam erat volutpat. Aenean accumsan.</p>
-		<a class="hw-link" href="#">Read more </a>
-		<ul>
-			<li>
-				<img src="../images/how-made-img/icon1.png" alt="значек">
-				<p>721</p>
-				<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
-			</li>
-			<li>
-				<img src="../images/how-made-img/icon2.png" alt="значек">
-				<p>16kg</p>
-				<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
-			</li>
-			<li>
-				<img src="../images/how-made-img/icon3.png" alt="значек">
-				<p>84</p>
-				<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
-			</li>
-		</ul>
+		<div>
+			<div class="hw-title-box">
+				<h2 class="hw-title">tradition and love</h2>
+				<h3 class="hw-subtitle">how it’s made?</h3>
+			</div>
+			<div class="hw-content-box">
+				<picture>
+					<source srcset="
+					./images/how-made-img/cow-desktop.webp 1x,
+					./images/how-made-img/cow-desktop@2x.webp 2x"
+					media="(min-width:1200px)"
+					sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, 280px"
+					type="image/webp" >
+				
+					<source srcset="
+					./images/how-made-img/cow-desktop.png 1x,
+					./images/how-made-img/cow-desktop@2x.png 2x"
+					media="(min-width:1200px)"
+					sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, 280px"
+					type="image/png" >
+
+					<source srcset="
+					./images/how-made-img/cow-tablet.webp 1x,
+					./images/how-made-img/cow-tablet@2x.webp 2x"
+					media="(min-width:768px)"
+					sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, 280px"
+					type="image/webp" >
+				
+					<source srcset="
+					./images/how-made-img/cow-tablet.png 1x,
+					./images/how-made-img/cow-tablet@2x.png 2x"
+					media="(min-width:768px)"
+					sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, 280px"
+					type="image/png" >
+
+					<source srcset="
+					./images/how-made-img/cow-mobile.webp 1x,
+					./images/how-made-img/cow-mobile@2x.webp 2x"
+					media="(min-width:320px)"
+					sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, 280px"
+					type="image/webp" >
+				
+					<source srcset="
+					./images/how-made-img/cow-mobile.png 1x,
+					./images/how-made-img/cow-mobile@2x.png 2x"
+					media="(min-width:320px)"
+					sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, 280px"
+					type="image/png" >
+				
+					<img src="./images/how-made-img/cow-mobile.png" alt="корова">
+				</picture>
+				<div class="hw-main-content">
+					<p class="a111">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+					<p class="a222">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
+					<p class="a333">Aliquam erat volutpat. Aenean accumsan.</p>
+					<a class="hw-btn" href="#"><span class="hw-btn-text">Read more</span></a>
+				</div>
+			</div>
+			<ul class="hw-card-list">
+				<li class="hw-card">
+					<img src="./images/how-made-img/icon1.png" alt="значек">
+					<p>721</p>
+					<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
+				</li>
+				<li class="hw-card">
+					<img src="./images/how-made-img/icon2.png" alt="значек">
+					<p>16kg</p>
+					<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
+				</li>
+				<li class="hw-card">
+					<img src="./images/how-made-img/icon3.png" alt="значек">
+					<p>84</p>
+					<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
+				</li>
+			</ul>
+		</div>
+		<div class="cow-spray-bg"></div>
 	</div>	
 </section>
+
+<picture>
