--- a/src/sass/components/_how-made.scss
+++ b/src/sass/components/_how-made.scss
@@ -1,10 +1,11 @@
 .how-made {
 	background: #FFF5F6;
-	padding: 125px 20px 97px 20px;
+	padding: 125px 0px 97px 0px;
+	z-index: -1;
 }
 
 .hw-title {
-	font-family: $heading-font;
+	margin: 0 0 15px 0;
 
 	font-weight: 400;
 	font-size: 18px;
@@ -17,6 +18,8 @@
 }
 
 .hw-subtitle {
+	margin: 0;
+
 	font-weight: 400;
 	font-size: 34px;
 	line-height: 1.15;
@@ -27,3 +30,150 @@
 
 	color: getColor(title);
 }
+
+.hw-title-box {
+	margin-bottom: 26px;
+}
+
+.hw-content-box {
+	margin-bottom: 39px;
+	// img {
+	// 	max-width: 100%;
+	// 	height: auto;
+	// }
+
+}
+
+.hw-main-content {
+	max-width: 220px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 46px;
+	// font-family: $main-font;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 1.62;
+	// p {
+	// 	margin: 0;
+		
+	// }
+	// &:nth-child(1) {
+	// 	color: getColor(black-color);
+	// }
+	// &:not(:first-child) {
+	// 	// margin: 0;
+	// 	color: getColor(secondary-text);
+	// }
+}
+.a111 {
+	margin: 0;
+}
+.a222 {
+	margin: 30px 0 0 0;
+	color: getColor(secondary-text)
+}
+.a333 {
+	margin: 33px 0 0 0;
+	color: getColor(secondary-text)
+}
+.hw-btn {
+	display: flex;
+	align-items: center;
+	text-align: center;
+	width: 176px;
+	height: 44px;
+	padding-left: 37px;
+	padding-right: 37px;
+	margin-top: 17px;
+	margin-right: auto;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	// font-family: DM Sans;
+	font-style: normal;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 1.29;
+
+	color: getColor(title);
+	background: getColor(white-color);
+	border-radius: 22px;
+
+	cursor: pointer;
+	transition-property: background;
+	animation: $animation;
+	&::after {
+		display: inline-block;
+		content: '';
+		width: 8px;
+		height: 10px;
+		margin-left: 14px;
+
+		background-image: url('../images/how-made-img/Vector 1.svg');
+	}
+	&:focus,
+	&:hover {
+		background: #ECEBEB;
+	}
+}
+
+.hw-card-list {
+	max-width: 230px;
+	padding: 0;
+	li:not(:last-child) {
+		margin-bottom: 38px;
+	}
+}
+
+.hw-card {
+	img {
+		margin-bottom: 16px;
+	}
+	
+	p {
+		margin: 0 0 15px 0;
+		font-family: $heading-font;
+		font-weight: 400;
+		font-size: 36px;
+		line-height: 1.14;
+		letter-spacing: 0.04em;
+		text-transform: uppercase;
+
+		color: getColor(title);
+	}
+	b {
+		font-size: 12px;
+		line-height: 1.7;
+	}
+}
+
+
+
+// ----------------------------
+.how-made .container {
+	position: relative;
+}
+
+
+.cow-spray-bg {
+	position: absolute;
+	left: -20px;
+	top: 641px;
+	width: 320px;
+	height: 133px;
+
+	z-index: 0;
+	background-image: url(../images/how-made-img/bg-milk-sprays-mobile.png);
+	@media screen and (min-device-pixel-ratio: 2),
+	screen and (min-resolution: 192dpi),
+	screen and (min-resolution: 2dppx) {
+		background-image: url(../images/how-made-img/bg-milk-sprays-mobile@2x.png);
+	}
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+}
+
+
+
+
+
