Добавляет header и footer
черновой вариант

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import './components/logo';
 
 @import './layout/header';
+@import './components/burger-menu';
 @import './layout/hero';
 @import './layout/advantages';
 @import './layout/approach';
