--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -20,3 +20,32 @@
     padding: 27px 25px;
   }
 }
+// HEADER BUTTONS
+.burger-menu .btn {
+  color: var(--accent-color);
+  background-color: var(--primary-white-color);
+  border: 2px solid var(--accent-color);
+
+  @media screen and (min-width: 768px) {
+  display: none;
+  }
+}
+
+
+.btn.btn-tablet {
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: block;
+      margin-top: 0;
+      margin-left: auto;
+      margin-right: 40px;
+
+      background-color: transparent;
+      border: 2px solid var(--accent-color);
+      color: var(--accent-color);
+
+    }
+    @media screen and (min-width: 1344px) {
+      margin-right: 0;
+    }
+  }
