Изменяет разметку хедера

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,62 +1,55 @@
 <header class="page-header">
   <div class="container">
-    <nav class="main-nav">
-      <a href="" class="logo">
-        <span class="logo__first-part">Hell</span>
-        <svg class="logo__icon">
-          <use href="./images/sprite.svg#icon-fire"></use>
-        </svg>
-        <span class="logo__second-part">EN</span>
-        <span class="logo__first-desc">Адский &nbsp;</span>
-        <span class="logo__second-desc">Английский</span>
-      </a>
-      <button
-        class="burger-menu"
-        type="button"
-        aria-expanded="false"
-        aria-controls="menu-container"
-        data-menu-button
-      >
-        <svg class="burger-icon" aria-label="мобильное меню">
+    <a
+      href=""
+      class="logo link"
+      href="./index.html"
+      aria-label="hell english"
+      data-menu-logo
+    >
+      <span class="logo__first-part">Hell</span>
+      <svg class="logo__icon">
+        <use href="./images/sprite.svg#icon-fire"></use>
+      </svg>
+      <span class="logo__second-part">EN</span>
+      <span class="logo__first-desc">Адский &nbsp;</span>
+      <span class="logo__second-desc">Английский</span>
+    </a>
+    <div class="btns-wrapper">
+      <button class="button mobile btn-tab" type="button" data-modal-open>
+        Консультация по телефону
+      </button>
+      <button class="burger-menu" type="button" data-menu-button>
+        <svg width="34" height="34" aria-label="переключатель мобильного меню">
+          <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
           <use class="icon-burger" href="./images/sprite.svg#icon-burger"></use>
         </svg>
       </button>
-      <div class="menu-container" id="menu-container" data-menu>
-        <div class="menu-open container">
-          <div class="nav-open">
-            <a href="" class="logo logo-reverse">
-              <span class="logo__first-part">Hell</span>
-              <svg class="logo__icon">
-                <use href="./images/sprite.svg#icon-fire"></use>
-              </svg>
-              <span class="logo__second-part">EN</span>
-              <span class="logo__first-desc">Адский &nbsp;</span>
-              <span class="logo__second-desc">Английский</span>
-            </a>
-            <svg class="cross-icon" aria-label="мобильное меню">
-              <use
-                class="icon-cross"
-                href="./images/sprite.svg#icon-cross"
-              ></use>
-            </svg>
-          </div>
-          <ul class="page-nav">
-            <li class="page-nav__item">
-              <a href="" class="page-nav__link">Программа обучения</a>
-            </li>
-            <li class="page-nav__item">
-              <a href="" class="page-nav__link">О нас</a>
-            </li>
-            <li class="page-nav__item">
-              <a href="" class="page-nav__link">Варианты обучения</a>
-            </li>
-            <li class="page-nav__item">
-              <a href="" class="page-nav__link">Контакты</a>
-            </li>
-          </ul>
-          <a href="#" class="button mobile">Консультация по телефону</a>
-        </div>
-      </div>
-    </nav>
+    </div>
+    <div class="nav-menu" data-menu>
+      <nav class="nav">
+        <ul class="nav-list list">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Программа обучения</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">О нас</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Варианты обучения</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <button
+        class="button mobile btn-mob"
+        type="button"
+        data-modal-open-mobile
+      >
+        Консультация по телефону
+      </button>
+    </div>
   </div>
 </header>
