--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -1,4 +1,5 @@
 .our-program{
+    position: relative;
     padding-top: 50px;
     padding-bottom: 537px;
     background-color: var(--main-color);
@@ -22,6 +23,7 @@
 
 .our-program-list{
     margin-left: 105px;
+    margin-bottom: 50px;
 
     &::before{
         display: inline-block;
@@ -45,7 +47,9 @@
 
     color: var(--white-color);
     
-    margin-bottom: 40px;
+    &:not(:last-child){
+        margin-bottom: 40px;
+    }
 
     &::before{
         display: flex;
@@ -84,6 +88,8 @@
         content: "";
         width: 13px;
         height: 1px;
+        top: 9px;
+        left: 0;
         background-color: var(--orange-color);
     }
 
@@ -132,7 +138,9 @@
         }
 
         .our-program-item{
-            margin-bottom: 30px;
+            &:not(:last-child){
+                margin-bottom: 30px;
+            }
         
             &::before{
                 left: -102px;
@@ -180,3 +188,199 @@
         }
     }
 }
+
+
+
+//why //
+
+.why-we-choose-title{
+    width: 180px;
+    margin-bottom: 30px;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.35;
+    letter-spacing: 0.03em;
+
+    color: var(--white-color);
+}
+
+li {
+    list-style-type: none;
+  }
+  
+  .why-we-choose-description {
+    position: absolute;
+    width: 280px;
+    padding: 20px 22px;
+    background-color: var(--white-color);
+    //margin-bottom: 90px;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+    height: 638px;
+    margin-bottom: 39px;
+  }
+  
+  .why-we-choose-set-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+  
+  .why-we-choose-item.number {
+    margin-left: 27px;
+    margin-bottom: 10px;
+  
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.08em;
+    color: var(--orange-color);
+  }
+  
+  .why-we-choose-item.number::before {
+    content: '';
+    display: block;
+    width: 17px;
+    height: 3px;
+    bottom: -10px;
+    left: -25px;
+    background-color: var(--orange-color);
+    border-radius: 2px;
+    position: relative;
+  }
+  
+  .why-we-choose-item.words {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.423;
+  
+    letter-spacing: 0.08em;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .why-we-choose-title{
+        font-size: 26px;
+        line-height: 1.308;
+
+        text-align: center;
+    }
+
+    .why-we-choose-description {
+      width: 688px;
+      padding: 30px 45px 26px 96px;
+      height: 400px;
+      margin-bottom: 50px;
+    }
+    .why-we-choose-set {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  
+    .why-we-choose-set-item.odd {
+      width: 236px;
+      margin-right: 22px;
+    }
+  
+    .why-we-choose-set-item.even {
+      width: 287px;
+    }
+  
+    .why-we-choose-item.words.second {
+      width: 225px;
+    }
+  
+    .why-we-choose-item.words.fourth {
+      width: 180px;
+    }
+  
+    .why-we-choose-item.words.sixth {
+      width: 225px;
+    }
+  
+    .why-we-choose-set-item-list {
+      margin-bottom: 30px;
+    }
+  }
+  
+  @media screen and (min-width: 1344px) {
+    .why-we-choose-title{
+        display: none;
+    }
+
+    .why-we-choose-title{
+        font-size: 26px;
+        line-height: 1.308;
+
+        text-align: center;
+    }
+
+    .why-we-choose-description {
+      width: 1314px;
+      height: 430px;
+      padding: 70px 82px 70px 84px;
+      margin-bottom: 130px;
+    }
+  
+    .why-we-choose-item.number {
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 1.65;
+      letter-spacing: 0.08em;
+      margin-bottom: 10px;
+    }
+  
+    .why-we-choose-item.number::before {
+      content: '';
+      display: block;
+      width: 17px;
+      height: 3px;
+      bottom: -17px;
+      left: -25px;
+      background-color: var(--orange-color);
+      border-radius: 2px;
+      position: relative;
+    }
+  
+    .why-we-choose-item.words {
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.08em;
+      width: 336px;
+    }
+  
+    .why-we-choose-set-item-list {
+      width: 33px;
+      margin-bottom: 32px;
+    }
+  
+    .why-we-choose-set-item:nth-child(1),
+    .why-we-choose-set-item:nth-child(2),
+    .why-we-choose-set-item:nth-child(3) {
+      margin-bottom: 32px;
+    }
+  
+    .why-we-choose-set-item:nth-child(4),
+    .why-we-choose-set-item:nth-child(5) {
+      margin-bottom: 0;
+    }
+  
+    .why-we-choose-item.words.second {
+      width: 336px;
+    }
+  
+    .why-we-choose-item.words.fourth {
+      width: 336px;
+    }
+  
+    .why-we-choose-item.words.sixth {
+      width: 336px;
+    }
+  
+    .why-we-choose-set-item.odd,
+    .why-we-choose-set-item.even {
+      width: 336px;
+      margin-right: 40px;
+    }
+    .why-we-choose-set-item:nth-child(3n) {
+      margin-right: 0;
+    }
+  }
+  
