--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -23,19 +23,19 @@
             <div class="teacher__right-side">
                 <h3 class="teacher-name">Елена Морева</h3>
                 <ul class="teacher-skill">
-                    <li class="teacher-skill-item">Опыт подготовки учеников к ВНО - 6 лет
+                    <li class="teacher-skill-item"><span>Опыт подготовки учеников к ВНО - 6 лет</span>
                         <!--<svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
                         </svg>-->                        
                     </li>
 
-                    <li class="teacher-skill-item">Собственный результат сдачи ВНО - 197 баллов 2 года подряд
+                    <li class="teacher-skill-item"><span>Собственный результат сдачи ВНО - 197 баллов 2 года подряд</span>
                         <!--<svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
                         </svg>-->
                     </li>
 
-                    <li class="teacher-skill-item">Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)
+                    <li class="teacher-skill-item"><span>Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)</span>
                         <!--</1><svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
                         </svg>-->                        
