--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -2,25 +2,25 @@
     <div class="container">
 
         <ul class="footer__list">
-            <li class="footer__list-item">
-                <a href="./index.html" class="footer__logo">
+            <li class="footer__list-item footer__logo">
+                <a href="./index.html">
                     <svg class="footer__logo-svg">
                         <use href="./icons/footer-sprite.svg#footer-logo"></use>
                 </a>
             </li>
-            <li class="footer__list-item">
-                <svg class="footer__phone">
+            <li class="footer__list-item footer__phone">
+                <svg class="footer__phone-svg">
                     <use href="./icons/footer-sprite.svg#footer-phone"></use>
                 </svg>
                 <p class="footer__phone-number">+38 (000) 000 00 00</p>
             </li>
-            <li class="footer__list-item">
-                <svg class="footer__line">
+            <li class="footer__list-item footer__line">
+                <svg class="footer__line-svg">
                     <use href="./icons/footer-sprite.svg#footer-line"></use>
                 </svg>
             </li>
-            <li class="footer__list-item">
-               
+            <li class="footer__list-item footer__instagram">
+               <img src="./images/footer/footer-instagram.jpg" alt="instagram">
             </li>
 
         </ul>
