--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -1,14 +1,108 @@
-// .footer__logo {
-//   display: block;
-//   margin: 0 auto;
-//   width: 84.12px;
-//   height: 30px;
+.footer {
+  padding: 30px 0;
+  background-color: $white;
 
-//   &:before {
-//     display: inline-flex;
-//     width: 100%;
-//     height: 100%;
-//     content: '';
-//     background-image: url('../icons/footer-icons/footer-logo.svg');
-//   }
-// }
+  @media screen and (min-width: 768px) {
+    padding: 43px 0 42px 0;
+  }
+
+  @media screen and (min-width: 1344px) {
+    padding: 55px 0;
+  }
+}
+
+.footer__list {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  @media screen and (min-width: 768px) {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+}
+
+.footer__list-item {
+  align-items: center;
+  margin: 0 auto;
+}
+
+.footer__logo {
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+    margin-right: 203px;
+    vertical-align: center;
+  }
+}
+
+.footer__logo-svg {
+  width: 84.12px;
+  height: 30px;
+
+  @media screen and (min-width: 768px) {
+    width: 128px;
+    height: 45px;
+  }
+}
+
+.footer__phone {
+  margin-bottom: 31px;
+  display: flex;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+    margin-right: 24px;
+  }
+}
+
+.footer__phone-svg {
+  width: 20px;
+  height: 19.21px;
+  margin-right: 10px;
+
+  @media screen and (min-width: 768px) {
+    width: 24px;
+    height: 23.06px;
+  }
+}
+
+.footer__phone-number {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  color: #111518;
+
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+}
+
+.footer__line {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: 0;
+  }
+}
+
+.footer__line-svg {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    width: 2px;
+    height: 40px;
+    border: 1px solid #b9b9b9;
+  }
+}
+
+.footer__instagram {
+  width: 40px;
+  height: 40px;
+}
