--- a/src/sass/layout/_approach.scss
+++ b/src/sass/layout/_approach.scss
@@ -16,8 +16,14 @@
   padding-bottom: 25px;
   padding-left: 5px;
   padding-right: 5px;
+  margin-bottom: 15px;
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
   transition: background-color var(--transition-function);
+}
+
+.approach-link {
+  display: block;
+  text-decoration: none;
 }
 
 .approach-item:hover,
@@ -50,10 +56,6 @@
   margin-bottom: -15px;
 }
 
-.approach-item {
-  margin-bottom: 15px;
-}
-
 .approach-icon {
   display: block;
   margin: 0 auto;
@@ -63,6 +65,7 @@
 }
 
 .approach-subtitle {
+  text-decoration: none;
   position: relative;
   font-weight: 700;
   font-size: 14px;
@@ -70,6 +73,7 @@
   text-align: center;
   letter-spacing: 0.08em;
   margin-bottom: 42px;
+  color: var(--dark-bg-color);
   transition: color var(--transition-function);
 }
 
@@ -136,15 +140,17 @@
   .approach-list {
     margin: -10px;
   }
+
   .approach-item {
-    width: 425px;
-    height: 396px;
     display: block;
+    width: 425px;
     max-width: calc((100% - 3 * 20px) / 3);
+    height: 396px;
     margin: 10px;
     padding-left: 30px;
     padding-right: 30px;
   }
+
   .approach-subtitle {
     font-size: 20px;
     line-height: 1.4;
