--- a/src/partials/approach.html
+++ b/src/partials/approach.html
@@ -4,25 +4,31 @@
         <h2 class="approach-title title">Как мы это делаем</h2>
 
         <ul class="approach-list">
+            
             <li class="approach-item">
+                <a class="approach-link" href="#">
                 <svg class="approach-icon" width="44" height="48">
                     <use href="./images/sprite.svg#icon-study-program"></use>
                 </svg>
                 <h3 class="approach-subtitle">Адаптированная программа подготовки к ВНО</h3>
                 <p class="approach-text">Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать
                     сочинения.</p>
+                </a>
             </li>
-
+            
             <li class="approach-item">
+                <a class="approach-link" href="#">
                 <svg class="approach-icon" width="46" height="47">
                     <use href="./images/sprite.svg#icon-mobile-learning"></use>
                 </svg>
                 <h3 class="approach-subtitle">Аудитория и <br> онлайн-обучение</h3>
                 <p class="approach-text">Учитель поможет не только в аудитории, но и во время домашней подготовки.
                     Родители могут участвовать в чате при желании.</p>
+                </a>
             </li>
-
+            
             <li class="approach-item">
+            <a class="approach-link" href="#">
                 <svg class="approach-icon" width="64" height="48">
                     <use href="./images/sprite.svg#icon-open-book"></use>
                 </svg>
@@ -31,18 +37,22 @@
 
                 <p class="approach-text">Статьи из источников, которые используются при разработке настоящего ВНО, будут
                     приходить на телефон дважды в неделю.</p>
+            </a>
             </li>
-
+           
             <li class="approach-item">
+                <a class="approach-link" href="#">
                 <svg class="approach-icon" width="48" height="48">
                     <use href="./images/sprite.svg#icon-group"></use>
                 </svg>
                 <h3 class="approach-subtitle">Психологическая<br> поддержка</h3>
                 <p class="approach-text">Мы научим тебя методикам прохождения тестирований, умению планировать свою
                     подготовку уверенности в себе.</p>
+                </a>
             </li>
-
+                        
             <li class="approach-item">
+                <a class="approach-link" href="#">
                 <svg class="approach-icon" width="40" height="46">
                     <use href="./images/sprite.svg#icon-female-student"></use>
                 </svg>
@@ -51,17 +61,20 @@
                 <p class="approach-text">Тебе не нужно тратить время на самостоятельный поиск материала и ничего
                     покупать дополнительно. Мы составили 2 пособия
                     для тебя.</p>
+                    </a>
             </li>
-
+                        
             <li class="approach-item">
+                <a class="approach-link" href="#">
                 <svg class="approach-icon" width="54" height="46">
                     <use href="./images/sprite.svg#icon-audio-book"></use>
                 </svg>
                 <h3 class="approach-subtitle">Умение воспринимать устную английскуб речь</h3>
                 <p class="approach-text">F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать и разбирать
                     аудиозаписи в соответствии с изучаемой лексикой.</p>
+                </a>
             </li>
-        </ul>
+         </ul>
     </div>
 </section>
 
