--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -40,12 +40,17 @@
             alt="студентка Тоня Кучеровская"
           />
         </picture>
+        <a href="#" class="reviews-card-link">
+          <svg
+            class="reviews-card-icon"
+            width="30"
+            height="30"
+            aria-label="Иконка Вконтакте"
+          >
+            <use href="./images/sprite.svg#icon-vk"></use>
+          </svg>
+        </a>
       </div>
-      <a class="reviews-card-link" href="">
-        <svg class="reviews-card-icon" width="30" height="30">
-          <use href="./images/sprite.svg#icon-vk"></use>
-        </svg>
-      </a>
       <div class="reviews-text-wrapper">
         <h3 class="reviews-card-title">Тоня Кучеровская</h3>
         <p class="reviews-card-subtitle">
@@ -58,234 +63,253 @@
           знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її
           справді хвилювала моя успішність. Вона стала для мене авторитетом,
           проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-          Зараз я можу похизуватись тим, що я студен...
+          Зараз я можу похизуватись тим, що я студен ...
+          <a class="reviews-text-link" href="#">Читать дальше</a>
         </p>
-        <a class="reviews-text-link" href="">Читать дальше</a>
       </div>
     </div>
     <div class="reviews-slider-set">
-      <button type="button" class="reviews-slider-btn">
-        <svg class="slider-btn-icon" width="25" height="25">
+      <button type="button" class="reviews-slider-btn btn-left">
+        <svg
+          class="slider-btn-icon"
+          width="25"
+          height="25"
+          aria-label="Левая стрелка слайдера"
+        >
           <use href="./images/sprite.svg#icon-arrow-1"></use>
         </svg>
       </button>
 
       <ul class="slider-img-set list">
         <li class="slider-item">
-          <picture class="reviews-card-picture">
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-2.webp    1x,
-                ./images/reviews/reviews-tablet-2@2x.webp 2x
-              "
-              media="(min-width: 768px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-2.jpg    1x,
-                ./images/reviews/reviews-tablet-2@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-mobile-2.webp    1x,
-                ./images/reviews/reviews-mobile-2@2x.webp 2x
-              "
-              media="(min-width: 320px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-mobile-2.jpg    1x,
-                ./images/reviews/reviews-mobile-2@2x.jpg 2x
-              "
-              media="(min-width: 320px)"
-            />
-            <img
-              class="reviews-card-img"
-              src="./images/reviews/reviews-mobile-2.jpg"
-              alt="первая студентка"
-            />
-          </picture>
+          <a href="#" class="slider-item-link">
+            <picture class="slider-picture">
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-2.webp    1x,
+                  ./images/reviews/reviews-tablet-2@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-2.jpg    1x,
+                  ./images/reviews/reviews-tablet-2@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-mobile-2.webp    1x,
+                  ./images/reviews/reviews-mobile-2@2x.webp 2x
+                "
+                media="(min-width: 320px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-mobile-2.jpg    1x,
+                  ./images/reviews/reviews-mobile-2@2x.jpg 2x
+                "
+                media="(min-width: 320px)"
+              />
+              <img
+                class="slider-img"
+                src="./images/reviews/reviews-mobile-2.jpg"
+                alt="первая студентка"
+              />
+            </picture>
+          </a>
         </li>
         <li class="slider-item">
-          <picture class="reviews-card-picture">
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-3.webp    1x,
-                ./images/reviews/reviews-tablet-3@2x.webp 2x
-              "
-              media="(min-width: 768px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-3.jpg    1x,
-                ./images/reviews/reviews-tablet-3@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-mobile-3.webp    1x,
-                ./images/reviews/reviews-mobile-3@2x.webp 2x
-              "
-              media="(min-width: 320px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-mobile-3.jpg    1x,
-                ./images/reviews/reviews-mobile-3@2x.jpg 2x
-              "
-              media="(min-width: 320px)"
-            />
-            <img
-              class="reviews-card-img"
-              src="./images/reviews/reviews-mobile-3.jpg"
-              alt="вторая студентка"
-            />
-          </picture>
+          <a href="#" class="slider-item-link">
+            <picture class="slider-picture">
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-3.webp    1x,
+                  ./images/reviews/reviews-tablet-3@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-3.jpg    1x,
+                  ./images/reviews/reviews-tablet-3@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-mobile-3.webp    1x,
+                  ./images/reviews/reviews-mobile-3@2x.webp 2x
+                "
+                media="(min-width: 320px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-mobile-3.jpg    1x,
+                  ./images/reviews/reviews-mobile-3@2x.jpg 2x
+                "
+                media="(min-width: 320px)"
+              />
+              <img
+                class="slider-img"
+                src="./images/reviews/reviews-mobile-3.jpg"
+                alt="вторая студентка"
+              />
+            </picture>
+          </a>
         </li>
         <li class="slider-item">
-          <picture class="reviews-card-picture">
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-4.webp    1x,
-                ./images/reviews/reviews-tablet-4@2x.webp 2x
-              "
-              media="(min-width: 768px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-4.jpg    1x,
-                ./images/reviews/reviews-tablet-4@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-mobile-4.webp    1x,
-                ./images/reviews/reviews-mobile-4@2x.webp 2x
-              "
-              media="(min-width: 320px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-mobile-4.jpg    1x,
-                ./images/reviews/reviews-mobile-4@2x.jpg 2x
-              "
-              media="(min-width: 320px)"
-            />
-            <img
-              class="reviews-card-img"
-              src="./images/reviews/reviews-mobile-4.jpg"
-              alt="третья студентка"
-            />
-          </picture>
+          <a href="#" class="slider-item-link">
+            <picture class="slider-picture">
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-4.webp    1x,
+                  ./images/reviews/reviews-tablet-4@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-4.jpg    1x,
+                  ./images/reviews/reviews-tablet-4@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-mobile-4.webp    1x,
+                  ./images/reviews/reviews-mobile-4@2x.webp 2x
+                "
+                media="(min-width: 320px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-mobile-4.jpg    1x,
+                  ./images/reviews/reviews-mobile-4@2x.jpg 2x
+                "
+                media="(min-width: 320px)"
+              />
+              <img
+                class="slider-img"
+                src="./images/reviews/reviews-mobile-4.jpg"
+                alt="третья студентка"
+              />
+            </picture>
+          </a>
         </li>
         <li class="slider-item">
-          <picture class="reviews-card-picture">
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-5.webp    1x,
-                ./images/reviews/reviews-tablet-5@2x.webp 2x
-              "
-              media="(min-width: 768px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-5.jpg    1x,
-                ./images/reviews/reviews-tablet-5@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <img
-              class="reviews-card-img"
-              src="./images/reviews/reviews-tablet-5.jpg"
-              alt="первая студентка"
-            />
-          </picture>
+          <a href="#" class="slider-item-link">
+            <picture class="slider-picture">
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-5.webp    1x,
+                  ./images/reviews/reviews-tablet-5@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-5.jpg    1x,
+                  ./images/reviews/reviews-tablet-5@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <img
+                class="slider-img"
+                src="./images/reviews/reviews-tablet-5.jpg"
+                alt="первая студентка"
+              />
+            </picture>
+          </a>
         </li>
         <li class="slider-item">
-          <picture class="reviews-card-picture">
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-6.webp    1x,
-                ./images/reviews/reviews-tablet-6@2x.webp 2x
-              "
-              media="(min-width: 768px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-6.jpg    1x,
-                ./images/reviews/reviews-tablet-6@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <img
-              class="reviews-card-img"
-              src="./images/reviews/reviews-tablet-6.jpg"
-              alt="первая студентка"
-            />
-          </picture>
+          <a href="#" class="slider-item-link">
+            <picture class="slider-picture">
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-6.webp    1x,
+                  ./images/reviews/reviews-tablet-6@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-6.jpg    1x,
+                  ./images/reviews/reviews-tablet-6@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <img
+                class="slider-img"
+                src="./images/reviews/reviews-tablet-6.jpg"
+                alt="первая студентка"
+              />
+            </picture>
+          </a>
         </li>
         <li class="slider-item">
-          <picture class="reviews-card-picture">
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-7.webp    1x,
-                ./images/reviews/reviews-tablet-7@2x.webp 2x
-              "
-              media="(min-width: 768px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-7.jpg    1x,
-                ./images/reviews/reviews-tablet-7@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <img
-              class="reviews-card-img"
-              src="./images/reviews/reviews-tablet-7.jpg"
-              alt="первая студентка"
-            />
-          </picture>
+          <a href="#" class="slider-item-link">
+            <picture class="slider-picture">
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-7.webp    1x,
+                  ./images/reviews/reviews-tablet-7@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-7.jpg    1x,
+                  ./images/reviews/reviews-tablet-7@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <img
+                class="slider-img"
+                src="./images/reviews/reviews-tablet-7.jpg"
+                alt="первая студентка"
+              />
+            </picture>
+          </a>
         </li>
         <li class="slider-item">
-          <picture class="reviews-card-picture">
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-8.webp    1x,
-                ./images/reviews/reviews-tablet-8@2x.webp 2x
-              "
-              media="(min-width: 768px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/reviews/reviews-tablet-8.jpg    1x,
-                ./images/reviews/reviews-tablet-8@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <img
-              class="reviews-card-img"
-              src="./images/reviews/reviews-tablet-8.jpg"
-              alt="первая студентка"
-            />
-          </picture>
+          <a href="#" class="slider-item-link">
+            <picture class="slider-picture">
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-8.webp    1x,
+                  ./images/reviews/reviews-tablet-8@2x.webp 2x
+                "
+                media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/reviews/reviews-tablet-8.jpg    1x,
+                  ./images/reviews/reviews-tablet-8@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <img
+                class="slider-img"
+                src="./images/reviews/reviews-tablet-8.jpg"
+                alt="первая студентка"
+              />
+            </picture>
+          </a>
         </li>
       </ul>
-      <button type="button" class="reviews-slider-btn">
+      <button type="button" class="reviews-slider-btn btn-right">
         <svg class="slider-btn-icon" width="25" height="25">
           <use href="./images/sprite.svg#icon-arrow-2"></use>
         </svg>
