--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -136,12 +136,12 @@
     padding-left: 15px;
     padding-right: 15px;
 
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-    &:nth-child(n + 5) {
-      margin-bottom: 0;
-    }
+    // &:nth-child(2n) {
+    //   margin-right: 0;
+    // }
+    // &:nth-child(n + 5) {
+    //   margin-bottom: 0;
+    // }
   }
   .how-do-icon {
     margin-bottom: 30px;
