--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -35,6 +35,10 @@
     margin-right: 203px;
     vertical-align: center;
   }
+
+  @media screen and (min-width: 1344px) {
+    margin-right: 290px;
+  }
 }
 
 .footer__logo-svg {
@@ -88,6 +92,7 @@
   @media screen and (min-width: 768px) {
     display: block;
     margin-left: 0;
+    margin-right: 24px;
   }
 }
 
@@ -105,4 +110,8 @@
 .footer__instagram {
   width: 40px;
   height: 40px;
+
+  @media screen and (min-width: 768px) {
+    margin-left: 0;
+  }
 }
