--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -2,10 +2,9 @@
   padding: 30px 0;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  menu {
+  .menu {
     margin-left: auto;
   }
 }
@@ -128,6 +127,9 @@
     &.is-open {
       display: block;
     }
+  }
+  .header-navigation {
+    justify-content: space-between;
   }
 }
 @media screen and (min-width: 1344px) {
