--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,15 +5,18 @@
 
 <!-- LOGO -->
 <a class="logo" href="index.html">
-<span class="logo-secondfloor">
-HEII
-<svg class="logo-fire" width="14" height="19">
-  <use href="./images/sprite.svg#icon-fire"></use>
-</svg>
-EN
-</span>
-<span class="logo-firstfloor"><span class="accent">aдский</span> английский</span>
-</a>  
+  <div class="logo-secondfloor ">
+  Hell
+          <svg class="logo-fire" width="13.93" height="19.38">
+          <use href="./images/sprite.svg#icon-fire"></use>
+          </svg>
+  EN
+  </div>
+  <div class="logo-firstfloor">
+      <span class="accent">адский </span>
+      <span class="eng">английский</span>
+  </div>
+</a>
 <!-- NAV-DESKTOP-->
 
 <ul class="nav-list-desktop">
