--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -221,13 +221,17 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       background-image: url(../images/footer-desk.png);
       background-size: 1680px 840px;
-      min-width: 1200px;
+      max-width: 1680px;
       width: 100%;
 
       min-height: 840px;
       &-input {
         width: 478px;
         height: 70px;
+        padding-left: 40px;
+        &::placeholder {
+          @include font(600, 20px, 1.2, 0.08em);
+        }
       }
     }
     &-invite {
