--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1471,9 +1471,6 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     padding: 40px;
     margin-bottom: 30px;
   }
@@ -1496,6 +1493,7 @@ a {
   }
   .feedback-left-part {
     width: 150px;
+    margin-right: 46px;
   }
   .feedback-picture {
     width: 150px;
@@ -1524,7 +1522,7 @@ a {
             justify-content: space-between;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .feedback.section {
     padding: 130px 0;
   }
@@ -1881,13 +1879,44 @@ a {
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-image: url(../images/footer-desk.png);
     background-size: 1680px 840px;
-    min-width: 1200px;
+    max-width: 1680px;
     width: 100%;
     min-height: 840px;
   }
   .request-form-input {
     width: 478px;
     height: 70px;
+    padding-left: 40px;
+  }
+  .request-form-input::-webkit-input-placeholder {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+  }
+  .request-form-input::-moz-placeholder {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+  }
+  .request-form-input:-ms-input-placeholder {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+  }
+  .request-form-input::-ms-input-placeholder {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+  }
+  .request-form-input::placeholder {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
   }
   .request-invite {
     font-weight: 600;
