hero mobile ready

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,5 +1,8 @@
 .header {
+  position: absolute;
   padding-top: 30px;
+
+  background-color: #fff;
 
   &-navigation {
     display: flex;
@@ -87,9 +90,9 @@
     padding: 0px;
     width: 20px;
     height: 12px;
-    z-index: 20;
 
     border: none;
+    color: black;
     background-color: transparent;
 
     &:hover,
@@ -98,6 +101,14 @@
 
       transition: $animation;
     }
+  }
+
+  &-icon {
+    display: inline-flex;
+  }
+
+  &-icon-menu {
+    fill: black;
   }
 
   &-menu-container {
@@ -201,6 +212,7 @@
 
     &-menu {
       &-container {
+        position: static;
         padding-top: 159px;
       }
       &-wrapper {
