--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -2,7 +2,7 @@
     <div class="container registration">
     <h1 class="registration-title">
         Регистрация на <span class="registration-title_orange">бесплатную</span> телефонную <span
-            class="registration-title_orange">консультацию</span> по нюансам ЗНО
+            class="registration-title_orange">консультацию</span> по нюансам ВНО
         по английскому языку
     </h1>
     <p class="reg-text">
