--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -150,6 +150,7 @@
   height: 48px;
   background: #ff6b09;
   margin-left: 10px;
+  border: none;
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
