--- a/src/sass/_teacher.scss
+++ b/src/sass/_teacher.scss
@@ -14,19 +14,39 @@
     .teacher-main-title {
       @include font (800, 46px, 1.3, 0.03em)
     }
-}
-
-@media screen and (min-width: 768px) {
-  .picture {
-    display: flex;
   }
-  .teacher-title {
-      padding-left: 40px;
-  }
-}
 
 .teacher-picture {
     margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .teacher-picture {
+    display: inline-flex;
+    align-items: flex-start;
+  }
+  .teacher {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .teacher-card {
+    display: inline-block;
+    width: 402px;
+    height: 516px;
+    margin-left: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .teacher-card {
+    display: inline-block;
+    width: 642px;
+    height: 660px;
+    margin-left: 30px;
+  }
 }
 
 .teacher-title {
@@ -53,9 +73,9 @@
 }
 
 .teacher-list {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
-
+    position: relative;
 }
 
 .teacher-list_list {
@@ -64,24 +84,36 @@
     justify-content: space-around;
 }
 
-.teacher-list::before  {
+.teacher-list::before {
     position: absolute;
     content: "";
     width: 280px;
     height: 0;
     border: 1px solid var(--txt-grey);
-    margin-bottom: 20px;
 }
 
-// .teacher-list-item {
-//     margin-bottom: 20px;
-// }
+@media screen and (min-width: 768px) {
+  .teacher-list::before {
+    width: 401px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .teacher-list::before {
+    width: 640px;
+  }
+}
+
+.teacher-list-item {
+    margin-bottom: 20px;
+    margin-left: 9px;
+}
 
 .teacher-subtitle {
     color: var(--txt-dark);
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
     .teacher-subtitle {
       @include font(600, 14px, 1.214, 0.06em);
     }
@@ -97,7 +129,11 @@
     display: flex;
     align-items: center;
     @include font(700, 20px, 1.65, 0.08em);
+    width: 82px;
+    height: 33px;
     color: var(--txt-orange);
+    position: relative;
+    margin: 5px 0;
 }
 
 .teacher-text {
@@ -105,12 +141,22 @@
     margin-bottom: 10px;
 }
 
+.teacher-undertitle::before {
+    content: "";
+    position: absolute;
+    width: 12px;
+    height: 1px;
+    bottom: 50%;
+    transform: translate(25%);
+    border: 1px solid var(--txt-orange);
+}
+
 .teacher-link {
     color: var(--txt-orange);
     text-decoration-line: underline;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
     .teacher-text,
     .teacher-link {
       @include font(500, 12px, 1.167, 0.06em);
