--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -3,4 +3,34 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
+:root {
+  --primary-white-color: #ffffff;
+  --primary-black-color: #000000;
+  --text-pink-color: #ffa5ba;
+  --text-red-color: #d41443;
+  --text-grey-color: #907e82;
+  --hero-background-color: #ffb8ca;
+  --hero-elipse-color: #ffa5ba;
+  --products-pink-color: #ffb8ca;
+  --products-brown-color: #f0d1a5;
+  --products-green-color: #c2e297;
+  --description-background-color: #fff5f6;
+  --slider-active-button-color: #d31342;
+  --slider-nonactive-button-color: #d9d9d9;
+  --slider-background-color: #fafafa;
+  --location-text-color: #907e82;
+  --location-cafe-color: #f0d1a5;
+  --button-hover-color: #ecebeb;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
 /*# sourceMappingURL=main.css.map */
