--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,19 +1,19 @@
 :root {
-    --primary-white-color:#FFFFFF;
-    --primary-black-color:#000000;
-    --text-pink-color:#FFA5BA;
-    --text-red-color:#D41443;
-    --text-grey-color:#907E82;
-    --hero-background-color: #FFB8CA;
-    --hero-elipse-color: #FFA5BA;
-    --products-pink-color: #FFB8CA;
-    --products-brown-color: #F0D1A5;
-    --products-green-color: #C2E297;
-    --description-background-color: #FFF5F6;
-    --slider-active-button-color: #D31342;
-    --slider-nonactive-button-color: #D9D9D9;
-    --slider-background-color: #FAFAFA;
-    --location-text-color: #907E82;
-    --location-cafe-color: #F0D1A5;
-    --button-hover-color: #ECEBEB;
+  --primary-white-color: #ffffff;
+  --primary-black-color: #000000;
+  --text-pink-color: #ffa5ba;
+  --text-red-color: #d41443;
+  --text-grey-color: #907e82;
+  --hero-background-color: #ffb8ca;
+  --hero-elipse-color: #ffa5ba;
+  --products-pink-color: #ffb8ca;
+  --products-brown-color: #f0d1a5;
+  --products-green-color: #c2e297;
+  --description-background-color: #fff5f6;
+  --slider-active-button-color: #d31342;
+  --slider-nonactive-button-color: #d9d9d9;
+  --slider-background-color: #fafafa;
+  --location-text-color: #907e82;
+  --location-cafe-color: #f0d1a5;
+  --button-hover-color: #ecebeb;
 }
