--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -3,30 +3,36 @@
         <h2 class="features_title">
             <ul class="features-list">
                 <li class="features-list_item">
+                  <div class="border-icon">
                     <svg class="features-list_icon">
-                        <use href="./icons/features-sprite.svg#mean" width="40" height="48">
+                        <use href="./icons/features-sprite.svg#mean" width="35" height="40">
                         </use>
                     </svg>
+                    </div>
                     <h3 class="features-list_title">
                         Адаптированная авторская
                         программа ВНО
                     </h3>
                 </li>
                 <li class="features-list_item">
+                    <div class="border-icon">
                     <svg class="features-list_icon">
-                        <use href="./icons/features-sprite.svg#mobile" width="40" height="48">
+                        <use href="./icons/features-sprite.svg#mobile" width="38" height="40">
                         </use>
                     </svg>
+                    </div>
                     <h3 class="features-list_title">
                         Современные
                         методики обучения
                     </h3>
                 </li>
                 <li class="features-list_item">
+                    <div class="border-icon">
                     <svg class="features-list_icon">
-                        <use href="./icons/features-sprite.svg#dollar" width="48" height="47">
+                        <use href="./icons/features-sprite.svg#dollar" width="40" height="42">
                         </use>
                     </svg>
+</div>
                     <h3 class="features-list_title">
                         Финансовая гарантия
                         результата
