правки розмірів, виправила падінг сеуції

--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -1,7 +1,7 @@
 .how-do {
   padding-top: 50px;
   padding-bottom: 50px;
-  background-color: #f1f1f1;
+  background-color: var(--primary-white-color);
 }
 
 .how-do-title {
@@ -20,7 +20,7 @@
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--title-text-color);
-  margin-bottom: 40px;
+  margin-bottom: 42px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &::after {
     content: ' ';
@@ -122,7 +122,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-right: -20px;
-    margin-bottom: -27px;
+    // margin-bottom: -27px;
   }
   .how-do-list-item {
     margin-right: 20px;
@@ -130,18 +130,18 @@
     flex-basis: calc(100% / 2 - 20px);
   }
   .how-do-list-item {
-    max-height: 334px;
+    height: 334px;
     padding-top: 40px;
-    padding-bottom: 20px;
+
     padding-left: 15px;
     padding-right: 15px;
 
-    // &:nth-child(2n) {
-    //   margin-right: 0;
-    // }
-    // &:nth-child(n + 5) {
-    //   margin-bottom: 0;
-    // }
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(n + 5) {
+      margin-bottom: 0;
+    }
   }
   .how-do-icon {
     margin-bottom: 30px;
@@ -149,6 +149,10 @@
   .skills-title {
     padding-left: 25px;
     padding-right: 25px;
+    margin-bottom: 52px;
+    &::after {
+      bottom: -60%;
+    }
   }
   .skills-text {
     padding-left: 11px;
@@ -170,7 +174,7 @@
     padding: 0;
     margin: 0;
     margin-right: -20px;
-    margin-bottom: -20px;
+    // margin-bottom: -20px;
   }
   .how-do-list-item {
     margin-right: 20px;
@@ -178,7 +182,6 @@
     flex-basis: calc(100% / 3 - 20px);
   }
   .how-do-list-item {
-    width: 425px;
     height: 396px;
     padding-top: 40px;
     padding-left: 15px;
@@ -195,6 +198,7 @@
   .skills-title {
     font-size: 20px;
     line-height: 1.4;
+    margin-bottom: 32px;
     &::after {
       bottom: -35%;
     }
