--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -39,7 +39,7 @@
       tincidunt. Aliquam erat volutpat. Aenean accumsan.
     </p>
     <button class="button">Read more</button>
-    <ul>
+    <ul class="list">
       <li>
         <p>721</p>
         <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
