hero tablet ready

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,16 @@
         <button class="hero-button" type="button" data-modal-open>
             хочу бесплатное занятие
         </button>
-        <img class="hero-picture" src="./images/hero/png/header-mobile.png">
+        <picture>
+            <source srcset="./images/hero/png/header-desktop.png 1x, ./images/hero/png/header-desktop@2x.png 2x"
+                media="(min-width: 1200px)" type="image/png">
+            <source srcset="./images/hero/png/header-tablet.png 1x, ./images/hero/png/header-tablet@2x.png 2x"
+                media="(min-width: 768px)" type="image/png">
+            <source srcset="./images/hero/png/header-mobile.png 1x, ./images/hero/png/header-mobile@2x.png 2x"
+                media="(min-width: 320px)" type="image/png">
+            <img class="hero-picture" src="./images/hero/png/header-mobile.png" alt="Фотография группы" type="image/png">
+        </picture>
+
         <ul class="hero-advantage-list">
             <li class="hero-advantage-item">
                 <svg class="hero-advantage-picture">
