Добавлены стили мобильной версии

--- a/src/partials/waranty.html
+++ b/src/partials/waranty.html
@@ -1,6 +1,8 @@
 <section class="warranty">
-    <div class="container">
-        <h2 class="title">Мы гарантируем</h2>
+    <div class="container warranty__heading-container">
+        <h2 class="warranty__heading title">Мы гарантируем</h2>
+    </div>
+    <div class="container warranty__list-container">
         <ul class="warranty__list">
             <li class="warranty__item">
                 Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании. Иначе мы вернем деньги.<span class="warranty__accent">*</span>
